Disconnect 구현 버튼을 눌러서 socket disconnect 발생, 클라이언트 쪽은 대화 로그가 전부 삭제 창을 닫는걸로는 disconnect가 안됨

--- a/views/chat_room.ejs
+++ b/views/chat_room.ejs
@@ -18,6 +18,7 @@
         <form action='/' method='POST'>
             <input type='text' id='send_msg'>
             <input type='submit' value='Send'>
+            <button id="discon">Disconnect</button>
         </form>
         <div width="700px" style="float:left; margin: 0px 50px 0px 0px">
             <ul id="chat_log"></ul>
@@ -46,6 +47,13 @@
                     socket.emit('chat message', $('#send_msg').val(), usr_name, room_num);
                     $('#send_msg').val('');
                     return false;
+                });
+                $('#discon').click(() => {
+                    socket.emit('leaveRoom', usr_name, room_num);
+                    $('#chat_log').empty();
+                    $('#chat_member').empty();
+                    document.getElementById('room_number').innerHTML = 'Bye';
+                    socket.disconnect();
                 });
                 socket.on('leaveRoom', (name, num, memberList) => {
                     console.log('leave');
