--- a/views/chat_room.ejs
+++ b/views/chat_room.ejs
@@ -6,7 +6,7 @@
             Chat room
         </title>
     </head>
-    <body>
+    <body onunload="discon()">
         <h2>Select chat room</h2>
         <select id="room_select">
             <option value="0">Room 0</option>
@@ -30,52 +30,54 @@
         <script src='/socket.io/socket.io.js'></script>
         <script src='http://code.jquery.com/jquery-1.11.1.js'></script>
         <script>
-            $(function(){
-                const usr_name = prompt("Input your name.");
-                var room_num = 0;
-                var socket = io();
-                socket.emit('joinRoom', usr_name, room_num); // 최초 join
+            const usr_name = prompt("Input your name.");
+            var room_num = 0;
+            var socket = io();
+            socket.emit('joinRoom', usr_name, room_num); // 최초 join
+            document.getElementById('room_number').innerHTML = "Room " + room_num;
+            $('#room_select').change(() => { // chat room 변경
+                socket.emit('leaveRoom', usr_name, room_num); //callback function 있어도 되고 없어도 되고
+                room_num = $('#room_select').val();
+                $('#chat_log').empty();
+                socket.emit('joinRoom', usr_name, room_num);
                 document.getElementById('room_number').innerHTML = "Room " + room_num;
-                $('#room_select').change(() => { // chat room 변경
-                    socket.emit('leaveRoom', usr_name, room_num); //callback function 있어도 되고 없어도 되고
-                    room_num = $('#room_select').val();
-                    $('#chat_log').empty();
-                    socket.emit('joinRoom', usr_name, room_num);
-                    document.getElementById('room_number').innerHTML = "Room " + room_num;
-                });
-                $('form').submit(() => { // message 전송
-                    socket.emit('chat message', $('#send_msg').val(), usr_name, room_num);
-                    $('#send_msg').val('');
-                    return false;
-                });
-                $('#discon').click(() => {
-                    socket.emit('leaveRoom', usr_name, room_num);
-                    $('#chat_log').empty();
-                    $('#chat_member').empty();
-                    document.getElementById('room_number').innerHTML = 'Bye';
-                    socket.disconnect();
-                });
-                socket.on('leaveRoom', (name, num, memberList) => {
-                    console.log('leave');
-                    $('#chat_log').append($('<li>').text('User ' + name + ' has left room ' + num));
-                    $('#chat_member').empty(); // room member 갱신
-                    for(var i=0 ; i<memberList.length ; i++){
-                        $('#chat_member').append($('<li>').text(memberList[i]));
-                    }
-                });
-                socket.on('joinRoom', (name, num, memberList) => {
-                    console.log('join');
-                    $('#chat_log').append($('<li>').text('User ' + name + ' has joined room ' + num));
-                    $('#chat_member').empty(); // room member 갱신
-                    for(var i=0 ; i<memberList.length ; i++){
-                        $('#chat_member').append($('<li>').text(memberList[i]));
-                    }
-                });
-                socket.on('chat message', (msg, name, num) => { // leave, join이랑 다르게 msg 값이 필요
-                    console.log('chat');
-                    $('#chat_log').append($('<li>').text("User (" + name + "): " + msg));
-                });
             });
+            $('form').submit(() => { // message 전송
+                socket.emit('chat message', $('#send_msg').val(), usr_name, room_num);
+                $('#send_msg').val('');
+                return false;
+            });
+            $('#discon').click(() => {
+                socket.emit('leaveRoom', usr_name, room_num);
+                $('#chat_log').empty();
+                $('#chat_member').empty();
+                document.getElementById('room_number').innerHTML = 'Bye';
+                socket.disconnect();
+            });
+            socket.on('leaveRoom', (name, num, memberList) => {
+                console.log('leave');
+                $('#chat_log').append($('<li>').text('User ' + name + ' has left room ' + num));
+                $('#chat_member').empty(); // room member 갱신
+                for(var i=0 ; i<memberList.length ; i++){
+                    $('#chat_member').append($('<li>').text(memberList[i]));
+                }
+            });
+            socket.on('joinRoom', (name, num, memberList) => {
+                console.log('join');
+                $('#chat_log').append($('<li>').text('User ' + name + ' has joined room ' + num));
+                $('#chat_member').empty(); // room member 갱신
+                for(var i=0 ; i<memberList.length ; i++){
+                    $('#chat_member').append($('<li>').text(memberList[i]));
+                }
+            });
+            socket.on('chat message', (msg, name, num) => { // leave, join이랑 다르게 msg 값이 필요
+                console.log('chat');
+                $('#chat_log').append($('<li>').text("User (" + name + "): " + msg));
+            });
+            function discon() {
+                socket.emit('leaveRoom', usr_name, room_num);
+                socket.disconnect();
+            }   
         </script>
     </body>
 </html>
